Basic cleanup, remove guild-specifc settings